--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -6,14 +6,21 @@ spec:
   selector:
     matchLabels:
       app: myapp
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       labels:
         app: myapp
     spec:
       containers:
-      - name: myapp
-        image: veerapaku/argocd:imageone-1.0
+      - name: recursing_golick
+        image: veerapaku/argocd:imagetwo-2.0
         ports:
-        - containerPort: 5002
+        - containerPort: 5003
+        resources:
+          requests:
+            memory: "256Mi"  # Minimum memory requested by the container
+            cpu: "500m"      # Minimum CPU requested by the container
+          limits:
+            memory: "512Mi"  # Maximum memory the container can use
+            cpu: "1"         # Maximum CPU the container can use
