--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -13,7 +13,7 @@ spec:
         app: myapp
     spec:
       containers:
-      - name: recursing_golick
+      - name: festive_khayyam
         image: veerapaku/argocd:imagetwo-2.0
         ports:
         - containerPort: 5003
