--- a/dev/service.yml
+++ b/dev/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: myapp-service2
 spec:
   selector:
-    app: myapp
+    app: myapp-deployment
   ports:
   - port: 8080           # Port exposed by the service
     protocol: TCP
