--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -13,10 +13,10 @@ spec:
         app: myapp-deployment
     spec:
       containers:
-      - name: distracted-maxwell
-        image: veerapaku/argocd:imagethree-3.0
+      - name: festive-khayyam
+        image: veerapaku/argocd:imagetw0-2.0
         ports:
-        - containerPort: 5004
+        - containerPort: 5003
         resources:
           requests:
             memory: "256Mi"  # Minimum memory requested by the container
