--- a/dev/service.yml
+++ b/dev/service.yml
@@ -4,15 +4,18 @@ metadata:
   name: myapp-service
 spec:
   selector:
-    app: myapp  # Matches the label defined in the Deployment
+    app: myapp  # Matches the label in your Deployment
   ports:
-    - protocol: TCP
-      port: 8080      # The port exposed by the Service for recursing-golick
-      targetPort: 5002 # Target port on the recursing-golick container
-    - protocol: TCP
-      port: 8080      # The port exposed by the Service for festive-khayyam
-      targetPort: 5003 # Target port on the festive-khayyam container
-    - protocol: TCP
-      port: 8080      # The port exposed by the Service for distracted-maxwell
-      targetPort: 5004 # Target port on the distracted-maxwell container
+    - name: recursing-golick-port    # Unique name for the first port
+      protocol: TCP
+      port: 5002                     # Port exposed by the Service for recursing-golick
+      targetPort: 5002               # Target port on the recursing-golick container
+    - name: festive-khayyam-port     # Unique name for the second port
+      protocol: TCP
+      port: 5003                     # Port exposed by the Service for festive-khayyam
+      targetPort: 5003               # Target port on the festive-khayyam container
+    - name: distracted-maxwell-port  # Unique name for the third port
+      protocol: TCP
+      port: 5004                     # Port exposed by the Service for distracted-maxwell
+      targetPort: 5004               # Target port on the distracted-maxwell container
   type: ClusterIP      # Exposes the service within the Kubernetes cluster
