--- a/manifests/bases/image-three/deployment.yml
+++ b/manifests/bases/image-three/deployment.yml
@@ -36,7 +36,7 @@ spec:
       #       memory: "512Mi"
       #       cpu: "1"
       - name: distracted-maxwell
-        image: veerapaku/argocd:imagethree-3.0
+        image: veerapaku/argocd-app:1.0
         ports:
         - containerPort: 5004
         resources:
