--- a/manifests/bases/image-three/deployment.yml
+++ b/manifests/bases/image-three/deployment.yml
@@ -35,7 +35,7 @@ spec:
       #     limits:
       #       memory: "512Mi"
       #       cpu: "1"
-      - name: distracted-maxwell
+      - name: imageonecontainer
         image: veerapaku/argocd-app:1.0
         ports:
         - containerPort: 5004
