--- a/manifests/bases/image-three/service.yml
+++ b/manifests/bases/image-three/service.yml
@@ -14,7 +14,7 @@ spec:
     #   protocol: TCP
     #   port: 5003                     # Port exposed by the Service for festive-khayyam
     #   targetPort: 5003               # Target port on the festive-khayyam container
-    - name: distracted-maxwell-port  # Unique name for the third port
+    - name: imageonecontainer  # Unique name for the third port
       protocol: TCP
       port: 5004                     # Port exposed by the Service for distracted-maxwell
       targetPort: 5004               # Target port on the distracted-maxwell container
