--- a/application.yaml
+++ b/application.yaml
@@ -8,7 +8,7 @@ spec:
 
   source:
     repoURL: https://github.com/shiva2980/Argocd-app-config.git
-    targetRevision: HEAD
+    targetRevision: main
     path: manifests/bases/image-three
   destination: 
     server: https://kubernetes.default.svc
