--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: myapp-argo-application-with-image3.0
   namespace: argocd
 spec:
   project: default
@@ -21,3 +21,57 @@ spec:
     automated:
       selfHeal: true
       prune: true
+
+---
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: myapp-argo-application-with-image2.0
+  namespace: argocd
+spec:
+  project: default
+
+  source:
+    repoURL: https://github.com/shiva2980/Argocd-app-config.git
+    targetRevision: main
+    path: manifests/bases/image-two
+  destination: 
+    server: https://kubernetes.default.svc
+    namespace: myapp-imagetwo
+
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+
+    automated:
+      selfHeal: true
+      prune: true
+
+---
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: myapp-argo-application-with-image1.0
+  namespace: argocd
+spec:
+  project: default
+
+  source:
+    repoURL: https://github.com/shiva2980/Argocd-app-config.git
+    targetRevision: main
+    path: manifests/bases/image-one
+  destination: 
+    server: https://kubernetes.default.svc
+    namespace: myapp-imageone
+
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+
+    automated:
+      selfHeal: true
+      prune: true
+
+
