--- a/manifests/bases/image-two/service.yaml
+++ b/manifests/bases/image-two/service.yaml
@@ -10,10 +10,10 @@ spec:
     #   protocol: TCP
     #   port: 5002                     # Port exposed by the Service for recursing-golick
     #   targetPort: 5002               # Target port on the recursing-golick container
-    - name: festive-khayyam-port     # Unique name for the second port
+    - name: imagetwocontainer     # Unique name for the second port
       protocol: TCP
-      port: 5003                     # Port exposed by the Service for festive-khayyam
-      targetPort: 5003               # Target port on the festive-khayyam container
+      port: 5005                     # Port exposed by the Service for festive-khayyam
+      targetPort: 5005               # Target port on the festive-khayyam container
     # - name: distracted-maxwell-port  # Unique name for the third port
     #   protocol: TCP
     #   port: 5004                     # Port exposed by the Service for distracted-maxwell
