--- a/manifests/bases/image-three/deployment.yaml
+++ b/manifests/bases/image-three/deployment.yaml
@@ -20,10 +20,10 @@ spec:
         resources:
           requests:
             memory: "256Mi"  # Minimum memory requested by the container
-            cpu: "500m"      # Minimum CPU requested by the container
+            cpu: "100m"      # Minimum CPU requested by the container
           limits:
-            memory: "1"  # Maximum memory the container can use
-            cpu: "1"         # Maximum CPU the container can use
+            memory: "512Mi"  # Maximum memory the container can use
+            cpu: "500m"         # Maximum CPU the container can use
         livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
           httpGet:
             path: /
