--- a/manifests/dev/image-one/kustomization.yaml
+++ b/manifests/dev/image-one/kustomization.yaml
@@ -1,8 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
- 
-images:
-- name: veerapaku/argocd:imageone-1.0
 
 resources:
-- ../../bases/image-one
+  - ../../bases/image-one
+
+images:
+  - name: veerapaku/argocd-app
+    newTag: "3.0"
+
+namespace: myapp-imageone
+
+namePrefix: dev-
