--- a/manifests/dev/image-three/kustomization.yaml
+++ b/manifests/dev/image-three/kustomization.yaml
@@ -2,7 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
  
 images:
-- name: veerapaku/argocd:imagethree-3.0
+- name: veerapaku/argocd-app
+  newTag: "1.0"
 
 resources:
 - ../../bases/image-three
+
+namespace: myapp-imagthree
+namePrefix: dev-
