--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: myapp-ingress
+  namespace: myapp-imagethree
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
