--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -18,44 +18,44 @@ spec:
             port:
               number: 5004
 
-# ---
+---
 
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: myapp-ingress
-#   namespace: myapp-imagetwo
-#   annotations:
-#     nginx.ingress.kubernetes.io/rewrite-target: /
-# spec:
-#   - host: image-two.local
-#     http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: myapp-imagetwo-service
-#             port:
-#               number: 5005
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: myapp-ingress
+  namespace: myapp-imagetwo
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  - host: image-two.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: dev-myapp-imagetwo-service
+            port:
+              number: 5005
 
-# ---
+---
 
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: myapp-ingress
-#   namespace: myapp-imageone
-#   annotations:
-#     nginx.ingress.kubernetes.io/rewrite-target: /
-# spec:
-#   - host: image-one.local
-#     http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: myapp-imageone-service
-#             port:
-#               number: 5006
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: myapp-ingress
+  namespace: myapp-imageone
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  - host: image-one.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: dev-myapp-imageone-service
+            port:
+              number: 5006
