--- a/manifests/bases/image-one/deployment.yaml
+++ b/manifests/bases/image-one/deployment.yaml
@@ -18,6 +18,13 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 5006
+        env:
+          - name: GREETING_MESSAGE
+            valueFrom:
+              configMapKeyRef:
+                name: myapp-config
+                namespace: myapp-imageone
+                key: GREETING_MESSAGE
         resources:
           requests:
             memory: "256Mi"
@@ -25,25 +32,19 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "1"
-      # - name: festive-khayyam
-      #   image: veerapaku/argocd:imagetwo-2.0
-      #   ports:
-      #   - containerPort: 5003
-      #   resources:
-      #     requests:
-      #       memory: "256Mi"
-      #       cpu: "500m"
-      #     limits:
-      #       memory: "512Mi"
-      #       cpu: "1"
-      # - name: distracted-maxwell
-      #   image: veerapaku/argocd:imagethree-3.0
-      #   ports:
-      #   - containerPort: 5004
-      #   resources:
-      #     requests:
-      #       memory: "256Mi"  # Minimum memory requested by the container
-      #       cpu: "500m"      # Minimum CPU requested by the container
-      #     limits:
-      #       memory: "512Mi"  # Maximum memory the container can use
-      #       cpu: "1"         # Maximum CPU the container can use
+        livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
+          httpGet:
+            path: /
+            port: 5006
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 2
+          failureThreshold: 3
+        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
+          httpGet:
+            path: /
+            port: 5006
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 2
+          failureThreshold: 3            
