--- a/manifests/bases/image-two/deployment.yaml
+++ b/manifests/bases/image-two/deployment.yaml
@@ -13,21 +13,17 @@ spec:
         app: myapp-imagetwo
     spec:
       containers:
-      # - name: recursing-golick
-      #   image: veerapaku/argocd:imageone-1.0
-      #   ports:
-      #   - containerPort: 5002
-      #   resources:
-      #     requests:
-      #       memory: "256Mi"
-      #       cpu: "500m"
-      #     limits:
-      #       memory: "512Mi"
-      #       cpu: "1"
       - name: imagetwocontainer
         image: veerapaku/argocd-app:2.0
         ports:
         - containerPort: 5005
+        env:
+          - name: GREETING_MESSAGE
+            valueFrom:
+              configMapKeyRef:
+                name: myapp-config
+                namespace: myapp-imagtwo
+                key: GREETING_MESSAGE
         resources:
           requests:
             memory: "256Mi"
@@ -35,14 +31,19 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "1"
-      # - name: distracted-maxwell
-      #   image: veerapaku/argocd:imagethree-3.0
-      #   ports:
-      #   - containerPort: 5004
-      #   resources:
-      #     requests:
-      #       memory: "256Mi"  # Minimum memory requested by the container
-      #       cpu: "500m"      # Minimum CPU requested by the container
-      #     limits:
-      #       memory: "512Mi"  # Maximum memory the container can use
-      #       cpu: "1"         # Maximum CPU the container can use
+        livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
+          httpGet:
+            path: /
+            port: 5005
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 2
+          failureThreshold: 3
+        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
+          httpGet:
+            path: /
+            port: 5005
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 2
+          failureThreshold: 3
