--- a/manifests/dev/kustomization.yaml
+++ b/manifests/dev/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- myapp-tls-sealedsecret.yaml
+- configmap.yaml
 - ingress.yaml
 - image-one
 - image-two 
