--- a/application.yaml
+++ b/application.yaml
@@ -1,28 +1,28 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: myapp-argo-application-with-image3.0
-  namespace: argocd
-spec:
-  project: default
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: myapp-argo-application-with-image3.0
+#   namespace: argocd
+# spec:
+#   project: default
 
-  source:
-    repoURL: https://github.com/shiva2980/Argocd-app-config.git
-    targetRevision: main
-    path: manifests/dev/image-three
-  destination: 
-    server: https://kubernetes.default.svc
-    namespace: myapp-imagethree
+#   source:
+#     repoURL: https://github.com/shiva2980/Argocd-app-config.git
+#     targetRevision: main
+#     path: manifests/dev/image-three
+#   destination: 
+#     server: https://kubernetes.default.svc
+#     namespace: myapp-imagethree
 
-  syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
+#   syncPolicy:
+#     syncOptions:
+#     - CreateNamespace=true
 
-    automated:
-      selfHeal: true
-      prune: true
+#     automated:
+#       selfHeal: true
+#       prune: true
 
----
+# ---
 
 apiVersion: argoproj.io/v1alpha1
 kind: Application
