--- a/manifests/bases/image-three/deployment.yaml
+++ b/manifests/bases/image-three/deployment.yaml
@@ -1,49 +1,49 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: myapp-imagethree
-spec:
-  selector:
-    matchLabels:
-      app: myapp-imagethree
-  replicas: 2
-  template:
-    metadata:
-      labels:
-        app: myapp-imagethree
-    spec:
-      containers:
-      - name: imageonecontainer
-        image: veerapaku/argocd-app:6.0
-        ports:
-        - containerPort: 5004
-        env:
-          - name: GREETING_MESSAGE
-            valueFrom:
-              configMapKeyRef:
-                name: myapp-config
-                namespace: myapp-imagethree
-                key: GREETING_MESSAGE
-        resources:
-          requests:
-            memory: "256Mi"  # Minimum memory requested by the container
-            cpu: "100m"      # Minimum CPU requested by the container
-          limits:
-            memory: "512Mi"  # Maximum memory the container can use
-            cpu: "500m"         # Maximum CPU the container can use
-        livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
-          httpGet:
-            path: /
-            port: 5004
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          timeoutSeconds: 2
-          failureThreshold: 3
-        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
-          httpGet:
-            path: /
-            port: 5004
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          timeoutSeconds: 2
-          failureThreshold: 3
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: myapp-imagethree
+# spec:
+#   selector:
+#     matchLabels:
+#       app: myapp-imagethree
+#   replicas: 2
+#   template:
+#     metadata:
+#       labels:
+#         app: myapp-imagethree
+#     spec:
+#       containers:
+#       - name: imageonecontainer
+#         image: veerapaku/argocd-app:6.0
+#         ports:
+#         - containerPort: 5004
+#         env:
+#           - name: GREETING_MESSAGE
+#             valueFrom:
+#               configMapKeyRef:
+#                 name: myapp-config
+#                 namespace: myapp-imagethree
+#                 key: GREETING_MESSAGE
+#         resources:
+#           requests:
+#             memory: "256Mi"  # Minimum memory requested by the container
+#             cpu: "100m"      # Minimum CPU requested by the container
+#           limits:
+#             memory: "512Mi"  # Maximum memory the container can use
+#             cpu: "500m"         # Maximum CPU the container can use
+#         livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
+#           httpGet:
+#             path: /
+#             port: 5004
+#           initialDelaySeconds: 10
+#           periodSeconds: 10
+#           timeoutSeconds: 2
+#           failureThreshold: 3
+#         readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
+#           httpGet:
+#             path: /
+#             port: 5004
+#           initialDelaySeconds: 5
+#           periodSeconds: 5
+#           timeoutSeconds: 2
+#           failureThreshold: 3
