--- a/manifests/bases/image-three/kustomization.yaml
+++ b/manifests/bases/image-three/kustomization.yaml
@@ -1,8 +1,8 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+# apiVersion: kustomize.config.k8s.io/v1beta1
+# kind: Kustomization
  
-namespace: myapp-imagethree
+# namespace: myapp-imagethree
 
-resources:
-- service.yaml
-- deployment.yaml
+# resources:
+# # - service.yaml
+# # - deployment.yaml
