--- a/manifests/dev/configmap.yaml
+++ b/manifests/dev/configmap.yaml
@@ -1,11 +1,11 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: myapp-config
-  namespace: myapp-imagethree
-data:
-  GREETING_MESSAGE: "Hello from ConfigMap!"
----
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: myapp-config
+#   namespace: myapp-imagethree
+# data:
+#   GREETING_MESSAGE: "Hello from ConfigMap!"
+# ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
