--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -1,28 +1,28 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: myapp-ingress
-  namespace: myapp-imagethree
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-spec:
-  # tls:
-  # - hosts:
-  #     - image-three.local
-  #   secretName: myapp-tls
-  rules:
-  - host: image-three.local
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: dev-myapp-imagethree-service
-            port:
-              number: 5004
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: myapp-ingress
+#   namespace: myapp-imagethree
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /
+# spec:
+#   # tls:
+#   # - hosts:
+#   #     - image-three.local
+#   #   secretName: myapp-tls
+#   rules:
+#   - host: image-three.local
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: dev-myapp-imagethree-service
+#             port:
+#               number: 5004
 
----
+# ---
 
 apiVersion: networking.k8s.io/v1
 kind: Ingress
