--- a/manifests/dev/kustomization.yaml
+++ b/manifests/dev/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - hpa.yaml
 - configmap.yaml
 - datadog-agent.yaml
+- datadog-sealedsecret.yaml
 - ingress.yaml
 - image-one
 - image-two 
