--- a/manifests/dev/datadog-sealedsecret.yaml
+++ b/manifests/dev/datadog-sealedsecret.yaml
@@ -1,13 +1,13 @@
-apiVersion: bitnami.com/v1alpha1
-kind: SealedSecret
-metadata:
-  name: datadog-secret
-  namespace: datadog
-spec:
-  encryptedData:
-    api-key: AgByJ9Tm...<encrypted blob>
-  template:
-    metadata:
-      name: datadog-secret
-      namespace: datadog
-    type: Opaque
+# apiVersion: bitnami.com/v1alpha1
+# kind: SealedSecret
+# metadata:
+#   name: datadog-secret
+#   namespace: datadog
+# spec:
+#   encryptedData:
+#     api-key: AgByJ9Tm...<encrypted blob>
+#   template:
+#     metadata:
+#       name: datadog-secret
+#       namespace: datadog
+#     type: Opaque
