--- a/manifests/dev/datadog-agent.yaml
+++ b/manifests/dev/datadog-agent.yaml
@@ -1,23 +1,12 @@
-apiVersion: apps/v1
-kind: DaemonSet
-metadata:
-  name: datadog-agent
-  namespace: datadog
-spec:
-  selector:
-    matchLabels:
-      app: datadog-agent
-  template:
-    metadata:
-      labels:
-        app: datadog-agent
-    spec:
-      containers:
-        - name: datadog-agent
-          image: gcr.io/datadoghq/agent:latest
-          env:
-            - name: DD_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: datadog-secret
-                  key: api-key
+# apiVersion: "datadoghq.com/v2alpha1"
+# kind: "DatadogAgent"
+# metadata:
+#   name: "datadog"
+#   namespace: datadog
+# spec:
+#   global:
+#     site: "datadoghq.eu"
+#     credentials:
+#       apiSecret:
+#         secretName: "datadog-secret"
+#         keyName: "api-key"
