--- a/manifests/dev/datadog-agent.yaml
+++ b/manifests/dev/datadog-agent.yaml
@@ -1,29 +1,17 @@
-apiVersion: "datadoghq.com/v2alpha1"
-kind: "DatadogAgent"
+apiVersion: datadoghq.com/v2alpha1
+kind: DatadogAgent
 metadata:
-  name: "datadog"
+  name: datadog
   namespace: datadog
 spec:
   global:
-    site: "datadoghq.eu"
-    tags:
-      - "env:dev"
+    site: datadoghq.eu
     credentials:
       apiSecret:
-        secretName: "datadog-secret"
-        keyName: "api-key"
+        secretName: datadog-secret
+        keyName: api-key
   features:
-    apm:
-      instrumentation:
-        enabled: true
-        targets:
-          - name: "default-target"
-            ddTraceVersions:
-              java: "1"
-              python: "3"
-              js: "5"
-              php: "1"
-              dotnet: "3"
-    logCollection:
+    kubelet:
       enabled: true
-      containerCollectAll: true
+      config:
+        tlsVerify: false
