--- a/manifests/dev/datadog-secret.yaml
+++ b/manifests/dev/datadog-secret.yaml
@@ -1,8 +1,8 @@
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: datadog-secret
-#   namespace: datadog
-# type: Opaque
-# data:
-#   api-key: YmFjZDU2MjczYTUyMmFiYWFjMzgxZGU1OTViNGU3ZTM=
+apiVersion: v1
+kind: Secret
+metadata:
+  name: datadog-secret
+  namespace: datadog
+type: Opaque
+data:
+  api-key: YmFjZDU2MjczYTUyMmFiYWFjMzgxZGU1OTViNGU3ZTM=
