--- a/manifests/dev/datadog-agent.yaml
+++ b/manifests/dev/datadog-agent.yaml
@@ -10,14 +10,14 @@ spec:
       apiSecret:
         secretName: datadog-secret
         keyName: api-key
-  features:
-    clusterChecks:
-      enabled: true
-      configProvider: configmap        
-  # override:
-  #   agent:
-  #     config:
-  #       configMapName: kubelet-check
-  #       configMapItems:
-  #         - key: conf.yaml
-  #           path: kubelet.d/conf.yaml
+  # features:
+  #   clusterChecks:
+  #     enabled: true
+  #     configProvider: configmap        
+  overrides:
+    agent:
+      config:
+        configMapName: datadog-kubelet-check
+        configMapItems:
+          - key: kubelet.d_conf.yaml
+            path: kubelet.d/conf.yaml
