--- a/manifests/dev/datadog-agent.yaml
+++ b/manifests/dev/datadog-agent.yaml
@@ -11,18 +11,10 @@ spec:
       apiSecret:
         secretName: datadog-secret
         keyName: api-key
-  overides:
+  override:
     agent:
       config:
         configMapName: datadog-kubelet-check
         configMapItems:
           - key: kubelet.d_conf.yaml
             path: kubelet.d/conf.yaml
-  # features:
-  #   customChecks:
-  #     enabled: true
-  #     config:
-  #       configMapName: datadog-kubelet-check
-  #       items:
-  #         - key: kubelet.d_conf.yaml
-  #           path: kubelet.d/conf.yaml
