--- a/application.yaml
+++ b/application.yaml
@@ -27,10 +27,33 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  name: .net-application
+  namespace: Dotnet
+spec:
+  project: Dotnet-Webapi
+
+  source:
+    repoURL: https://github.com/shiva2980/Argocd-app-config.git
+    targetRevision: main
+    path: manifests/dev/dotnet-webapi
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: Dotnet
+  syncPolicy:
+    syncOptions:  
+    - CreateNamespace=true
+    automated:
+      selfHeal: true
+      prune: true
+---
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
   name: myapp-argo-application-with-image2.0
   namespace: argocd
 spec:
-  project: default
+  project: Images
 
   source:
     repoURL: https://github.com/shiva2980/Argocd-app-config.git
@@ -56,7 +79,7 @@ metadata:
   name: myapp-argo-application-with-image1.0
   namespace: argocd
 spec:
-  project: default
+  project: Images
 
   source:
     repoURL: https://github.com/shiva2980/Argocd-app-config.git
