--- a/manifests/bases/dotnet-webapi/service.yaml
+++ b/manifests/bases/dotnet-webapi/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: Dotnet
+    app: dotnet
   port: 
   - name: pokemonreviewapp
     protocol: TCP
