--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -27,9 +27,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: Dotnet
+  name: dotnet
   labels:
-    name: Dotnet
+    name: dotnet
   annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
 spec:
