--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -41,7 +41,8 @@ spec:
         path: "/"
         backend:
           service:
-            name: dev-pokemonreviewapp-service
+            # name: dev-pokemonreviewapp-service
+            name: pokemonreviewapp-service
             port: 
               number: 80
 
