--- a/manifests/bases/dotnet-webapi/service.yaml
+++ b/manifests/bases/dotnet-webapi/service.yaml
@@ -6,7 +6,7 @@ spec:
   type: NodePort
   selector:
     app: dotnet
-  port: 
+  ports: 
   - name: pokemonreviewapp
     protocol: TCP
     port: 8080
