--- a/manifests/bases/dotnet-webapi/service.yaml
+++ b/manifests/bases/dotnet-webapi/service.yaml
@@ -1,14 +1,14 @@
-kubernetes apiVersion: v1
+apiVersion: v1
 kind: Service
 metadata:
   name: pokemonreviewapp-service
 spec:
-  type: NodePort
   selector:
     app: dotnet
-  ports: 
-  - name: pokemonreviewapp
-    protocol: TCP
-    port: 8080
-    targetPort: 8080
-    nodePort: 30080
+  type: NodePort
+  ports:
+    - name: pokemonreviewapp
+      port: 8080
+      targetPort: 8080
+      nodePort: 30080
+      protocol: TCP
