--- a/manifests/bases/dotnet-webapi/deployment.yaml
+++ b/manifests/bases/dotnet-webapi/deployment.yaml
@@ -22,11 +22,11 @@ spec:
         - containerPort: 8080 
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "500m"
+            memory: 256Mi
+            cpu: 100m
           limits:
-            memory: "512Mi"
-            cpu: "1"
+            memory: 512Mi
+            cpu: 300m
         livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
           httpGet:
             path: /
