--- a/manifests/bases/dotnet-webapi/service.yaml
+++ b/manifests/bases/dotnet-webapi/service.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
   selector:
     app: dotnet
-  type: NodePort
+  type: ClusterIP
   ports:
     - name: pokemonreviewapp
       port: 8080
       targetPort: 8080
-      nodePort: 30080
+      # nodePort: 30080
       protocol: TCP
