--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -21,6 +21,27 @@
 #             name: dev-myapp-imagethree-service
 #             port:
 #               number: 5004
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd-ingress
+  namespace: argocd
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+spec:
+  rules:
+    - host: argocd.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 80
+
+---
 
 apiVersion: networking.k8s.io/v1
 kind: Ingress
