--- a/manifests/bases/dotnet-webapi/deployment.yaml
+++ b/manifests/bases/dotnet-webapi/deployment.yaml
@@ -11,6 +11,9 @@ spec:
     metadata:
       annotations:
         admission.datadoghq.com/enabled: "false"  # ✅ Disables auto-injection for this pod    
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8080"
       labels:
         app: dotnet
     spec:
